tests/sksl/errors/UnscopedVariableInIf.glsl
### Compilation failed:

error: 2: variable 'x' must be created in a scope
1 error
